Reconfigured DropdownMenu to fix alignment

--- a/src/components/UI/DropdownMenu/DropdownMenu.module.css
+++ b/src/components/UI/DropdownMenu/DropdownMenu.module.css
@@ -4,7 +4,8 @@
 
 .containerActive {
   position: absolute;
-  margin-top: 120px;
+  /* margin-top: 120px; */
+  /* margin-right: 15px; */
 }
 
 .listItem {
@@ -27,14 +28,15 @@
 
 .currentOption {
   border: 1px solid #ccc;
-  padding: 5px;
   background-color: #fff;
   width: 90px;
   display: flex;
   align-items: center;
   padding: 5px 8px;
   cursor: pointer;
+  border-radius: 5px;
 }
+
 .currentOption span {
   margin-right: auto;
 }
